css/main.css
/* ==================================================
 *  umbauschool.org
 * -------------------------------------------------- */


/*
 * BASE
 */
:root {
  --gray-light: rgb(242, 242, 242);
  --gray: rgb(175, 175, 175);
  --red: rgb(236, 51, 35);

  --outside-border-top: 3.5vw;
  --outside-border-width: 7.5vw;
}

::moz-selection {
  background-color: var(--red);
  color: white;
}

::selection {
  background-color: var(--red);
  color: white;
}

html,
body {
  font-size: 100%;
  margin: 0;
  padding: 0;
}

html {
  background-color: black;
}

body {
  background-color: white;
  font-family: 'Roboto', sans-serif;
}

img {
  display: block;
  height: auto;
  max-width: 100%;
  outline: none;
}

/*
 * UTILS
 */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}



/*
 * HEADER
 */
.main-title {
  border-color: var(--gray-light);
  border-style: solid;
  border-width: var(--outside-border-top) var(--outside-border-width) 0;
  box-sizing: border-box;
  height: 120vh;
  pointer-events: none;
  position: relative;
  z-index: 50;
}

.site-name {
  color: black;
  font-size: 33.66vw;
  font-weight: bold;
  left: 0;
  line-height: 1;
  margin: 0;
  margin-left: -2vw;
  margin-top: -0.33em;
  position: fixed;
  top: 0;
  transform: translateZ(0);
  white-space: nowrap;
  z-index: 100;
}

.site-name a {
  color: inherit;
  display: inline-block;
  height: 0.866666em;
  pointer-events: auto;
  text-decoration: none;
  transition: color .2s;
}

.site-name a:focus,
.site-name a:hover {
  color: var(--red);
}

.site-name .letter {
  display: inline-block;
}

.tag-wrap {
  height: 100vh;
  left: calc(var(--outside-border-width) * -1);
  pointer-events: none;
  position: absolute;
  right: calc(var(--outside-border-width) * -1);
  top: calc(var(--outside-border-top) * -1);
  z-index: 200;
}

.tag {
  --tag-push: calc(var(--outside-border-width) / 2);

  color: var(--red);
  font-size: 10vw;
  font-weight: bold;
  line-height: 1;
  margin: 0;
  margin-left: var(--tag-push);
  max-width: 12em;
  position: absolute;
  top: 20%;
  z-index: 60;
}

@media (min-width: 750px) {
  .tag-wrap {
    align-items: center;
    display: flex;
  }

  .tag {
    font-size: 8vw;
    position: relative;
    top: auto;
  }
}

@media (min-width: 1000px) {
  .tag {
    font-size: 6vw;
    margin-top: 0;
  }
}


/*
 * NAV
 */
.menu-trigger {
  --negative-offset: calc(var(--outside-border-width) * -1 - 15px);

  left: 100%;
  margin-left: var(--negative-offset);
  margin-top: -8px;
  padding: 8px 0;
  position: fixed;
  top: 20px;
  transform: translateZ(0);
  z-index: 1010;
}

.menu-trigger::before,
.menu-trigger::after {
  --trigger-width: calc(var(--outside-border-width) * 2 / 3);

  border-top: 5px solid var(--red);
  content: "";
  display: block;
  height: 0;
  max-width: 66px;
  transition: transform .2s;
  width: 32px;
}

.menu-trigger::before {
  margin-bottom: 6px;
}

.has-main-menu-showing .menu-trigger::before {
  transform: translate(0, 6px) rotate(-225deg);
}
.has-main-menu-showing .menu-trigger::after {
  transform: translate(0, -6px) rotate(-135deg);
}

@media (min-width: 750px) {
  .menu-trigger {
    --negative-offset: calc(var(--outside-border-width) * -1 - 25px);

    margin-left: var(--negative-offset);
    top: var(--outside-border-top);
  }

  .menu-trigger::before,
  .menu-trigger::after {
    border-top-width: 7px;
    width: 50px;
  }

  .menu-trigger::before {
    margin-bottom: 8px;
  }

  .has-main-menu-showing .menu-trigger::before {
    transform: translate3d(0, 8px, 0) rotate(-225deg);
  }
  .has-main-menu-showing .menu-trigger::after {
    transform: translate3d(0, -8px, 0) rotate(-135deg);
  }
}

@media (min-width: 1000px) {
  .menu-trigger {
    --negative-offset: calc(var(--outside-border-width) * -1);

    margin-left: var(--negative-offset);
  }

  .menu-trigger::before,
  .menu-trigger::after {
    border-top-width: 10px;
    width: var(--trigger-width);
  }

  .menu-trigger::before {
    margin-bottom: 8px;
  }

  .has-main-menu-showing .menu-trigger::before {
    transform: translate3d(0, 9px, 0) rotate(-225deg);
  }

  .has-main-menu-showing .menu-trigger::after {
    transform: translate3d(0, -9px, 0) rotate(-135deg);
  }
}

.main-menu {
  background-color: black;
  box-sizing: border-box;
  display: none;
  height: 100vh;
  padding: 38px 60px;
  padding-left: var(--outside-border-width);
  position: fixed;
  top: 0;
  transform: translateZ(0);
  width: 100%;
  z-index: 1000;
}

.has-main-menu-showing .main-menu {
  display: block;
}

.main-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.main-menu a {
  color: white;
  display: block;
  font-size: 18px;
  font-weight: bold;
  line-height: 24px;
  margin: 0 0 0 -15px;
  padding: 10px 15px;
  text-decoration: none;
}

.main-menu a:focus,
.main-menu a:hover {
  background-color: rgba(255, 255, 255, 0.2);
  outline: none;
}

@media (min-width: 750px) {
  .main-menu {
    height: auto;
    padding: var(--outside-border-top) var(--outside-border-width);
    padding-right: calc(var(--outside-border-width) + 25px);
  }

  .main-menu ul {
    margin: -8px 18px;
    text-align: right;
  }

  .main-menu li {
    display: inline-block;
  }

  .main-menu a {
    margin: 0 1px;
  }
}

@media (min-width: 1000px) {
  .main-menu {
    padding-right: var(--outside-border-width);
  }
}


/*
 * MAIN
 */
main {
  box-sizing: border-box;
  border-right: var(--outside-border-width) solid var(--gray-light);
  font-size: 18px;
  margin-left: auto;
  padding: calc(var(--outside-border-width) / 2);
  padding-left: 20vw;
  width: 100%;
}

@media (min-width: 750px) {
  main {
    font-size: 20px;
    padding: var(--outside-border-width);
    width: 83%;
  }
}

@media (min-width: 1000px) {
  main {
    width: 70%;
  }
}

main h1 {
  font-size: 40px;
  line-height: 40px;
  margin: 100px 0 30px;
  padding-top: 100px;
}

@media (min-width: 750px) {
  main h1 {
    font-size: 50px;
    line-height: 60px;
    margin-top: 200px;
  }
}

@media (min-width: 1000px) {
  main h1 {
    margin-top: 300px;
  }
}

main h2 {
  font-size: 26px;
  line-height: 32px;
  margin: 100px 0 30px;
}

@media (min-width: 750px) {
  main h2 {
    font-size: 30px;
    line-height: 40px;
  }
}

@media (min-width: 1250px) {
  main h2 {
    margin-top: 200px;
  }
}

main h1 + h2,
main h2:first-child {
  margin-top: 0;
}

main h2 + h2 {
  margin-top: 0;
}

main p {
  line-height: 1.5;
  margin: 0 0 30px;
  max-width: 44em;
}

@media (max-width: 999px) {
  main p {
    -webkit-hyphens: auto;
    -webkit-hyphenate-limit-before: 3;
    -webkit-hyphenate-limit-after: 3;
    -webkit-hyphenate-limit-chars: 6 3 3;
    -webkit-hyphenate-limit-lines: 2;
    -webkit-hyphenate-limit-last: always;
    -webkit-hyphenate-limit-zone: 8%;

    -moz-hyphens: auto;
    -moz-hyphenate-limit-chars: 6 3 3;
    -moz-hyphenate-limit-lines: 2;
    -moz-hyphenate-limit-last: always;
    -moz-hyphenate-limit-zone: 8%;

    -ms-hyphens: auto;
    -ms-hyphenate-limit-chars: 6 3 3;
    -ms-hyphenate-limit-lines: 2;
    -ms-hyphenate-limit-last: always;
    -ms-hyphenate-limit-zone: 8%;

    hyphens: auto;
    hyphenate-limit-chars: 6 3 3;
    hyphenate-limit-lines: 2;
    hyphenate-limit-last: always;
    hyphenate-limit-zone: 8%;
  }
}

main hr {
  border: none;
  margin: 0;
}

main a {
  color: black;
  text-decoration: underline;
  transition: color .2s;
}

main a:hover {
  color: var(--red);
}

main .btn {
  background-color: var(--red);
  color: white;
  display: inline-block;
  font-size: 20px;
  margin: 10px 0 20px;
  padding: 10px 25px;
  text-align: center;
  text-decoration: none;
  transition: background .2s, color .2s;
}

main .btn:hover {
  background-color: black;
  color: white;
}

.img--full {
  max-width: none;
  width: calc(100% + var(--outside-border-width) * 1.5);
}

.deco,
.deco-right {
  border-color: var(--gray-light);
  border-left-style: solid;
  border-left-width: var(--outside-border-width);
  height: 66vh;
  left: 0;
  position: absolute;
}

.deco-right {
  border-color: white;
  left: auto;
  right: 0;
}

/*
 * STUDIO flags
 */
.studios + h1 {
  margin-top: 0;
}

.studio {
  box-sizing: border-box;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-bottom: 100px;
  padding-top: 40px;
}

.flagstripes {
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  top: 0;
  transition: opacity .2s ease-in;
  width: var(--outside-border-width);
}

@media (min-width: 750px) {
  .flagstripes {
    width: 18%;
  }
}

@media (min-width: 1000px) {
  .flagstripes {
    width: 25%;
  }
}

.flagstripes.in-view {
  opacity: 1;
  transition-timing-function: ease-out;
}

.flagstripe {
  background-color: var(--red);
  height: calc(100% / 3);
  position: absolute;
  width: 100%;
}

.flagstripe:nth-child(1) { top: 0; }
.flagstripe:nth-child(2) { top: calc(100% / 3 * 2); }
.flagstripe:nth-child(3) { top: 100%; }
.flagstripe:nth-child(4) { top: 100%; }
.flagstripe:nth-child(5) { top: 100%; }
.flagstripe:nth-child(6) { top: 100%; }
.flagstripe:nth-child(7) { top: 100%; }



/*
 * STUDENT GRID
 */
.person-grid {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -15px;
}

.person-grid .person-card {
  margin: 0 15px 45px;
  width: calc(100% - 50px);
}

@media (min-width: 750px) {
  .person-grid .person-card {
    width: calc(50% - 30px);
  }
}

@media (min-width: 1000px) {
  .person-grid .person-card {
    width: calc(33.3333% - 30px);
  }
}

.person-card {
  border-bottom: 2px solid var(--gray-light);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  color: black;
  justify-content: flex-start;
  padding: 0 0 10px;
  text-decoration: none;
  transition: border .2s;
}

.person-card:hover {
  border-bottom-color: black;
}

.person-card:hover .person-card__img,
.person-card__img-wrap.in-view .person-card__img {
  filter: blur(0);
  transform: scale(1);
}

.person-card__name,
.person-card__website {
  transition: color .2s;
}

a.person-card:hover .person-card__name,
a.person-card:hover .person-card__website {
  color: var(--red);
}

.person-card__img-wrap {
  margin: 0 0 20px;
  overflow: hidden;
}

.person-card__img {
  filter: blur(10px);
  transform: scale(1.1);
  transition: filter .5s, transform .5s;
}


.person-card__name {
  font-size: inherit;
  line-height: inherit;
  margin: 0 0 5px;
}

.person-card__title {
  color: var(--gray);
  font-size: 15px;
  margin: 0 0 10px;
}

.person-card__bio {
  color: black;
  font-size: 15px;
  margin: 0 0 30px;
}

.person-card__website {
  color: var(--gray);
  font-size: 15px;
  margin-top: auto;
}


/*
 * PATRON GRID
 */
.patron-list {
  color: var(--gray);
  font-size: 16px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.patron-list li {
  margin: 0 0 10px;
}

@media (min-width: 750px) {
  .patron-list {
    columns: 2 40px;
    font-size: 18px;
    line-height: 20px;
  }

  .patron-list li {
    margin-bottom: 20px;
  }
}

@media (min-width: 1000px) {
  .patron-list {
    columns: 2 40px;
    font-size: 20px;
    line-height: 20px;
  }

  .patron-list li {
    margin-bottom: 20px;
  }
}

